--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,12 @@
 {
+  "plugins": ["@typescript-eslint"],
   "extends": [
-    "airbnb",
-    "prettier"
-  ],
-  "plugins": [
+    "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
   "rules": {
-    "prettier/prettier": [
-      "error"
-    ]
+    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-explicit-any": "error"
   }
 }
