--- a/.prettierrc
+++ b/.prettierrc
@@ -7,12 +7,12 @@
   "insertPragma": false,
   "bracketSameLine": false,
   "jsxSingleQuote": false,
-  "printWidth": 120,
+  "printWidth": 80,
   "quoteProps": "as-needed",
   "semi": true,
   "singleQuote": false,
   "tabWidth": 2,
-  "trailingComma": "all",
+  "trailingComma": "es5",
   "useTabs": false,
   "singleAttributePerLine": false
 }
