--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "contentful": "^9.1.34",
+    "contentful-management": "^10.12.0",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
