--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^12.2.5",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "contentful": "^9.1.34",
