--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lh-report": "lighthouse http://localhost:3000/kisiler --view --output html --output-path ./report.html --throttling.cpuSlowdownMultiplier=2.7"
   },
   "dependencies": {
     "@next/bundle-analyzer": "^12.2.5",
