--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lh-report": "lighthouse http://localhost:3000/kisiler --view --output html --output-path ./report.html --throttling.cpuSlowdownMultiplier=2.7"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
+    "@types/react-redux": "^7.1.24",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "contentful": "^9.1.34",
@@ -18,7 +20,8 @@
     "next": "12.2.4",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@types/node": "18.7.1",
