--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "18.7.1",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
     "eslint": "^8.2.0",
     "eslint-config-next": "12.2.4",
     "eslint-config-prettier": "^8.5.0",
