--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest --watch",
     "prepare": "husky install",
     "lh-report": "lighthouse http://localhost:3000/kisiler --view --output html --output-path ./report.html --throttling.cpuSlowdownMultiplier=2.7"
   },
@@ -15,7 +16,7 @@
     "@types/react-redux": "^7.1.24",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
-    "contentful": "^9.1.34",
+    "contentful": "^9.2.15",
     "contentful-management": "^10.12.0",
     "next": "12.2.4",
     "react": "18.2.0",
@@ -24,6 +25,9 @@
     "react-redux": "^8.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^13.5.0",
     "@types/node": "18.7.1",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
@@ -31,7 +35,11 @@
     "eslint": "^8.2.0",
     "eslint-config-next": "12.2.4",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^27.2.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
+    "jest": "28.1.0",
+    "jest-environment-jsdom": "28.1.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "typescript": "4.7.4"
